login branch - updated.

--- a/app/pages/main/events/event/event-brackets/brackets.html
+++ b/app/pages/main/events/event/event-brackets/brackets.html
@@ -11,7 +11,7 @@
         <ion-title>ZG Beast of The East</ion-title>
 
         <ion-buttons end>
-            <button (click)="dismiss()">
+            <button (click)="openBracketImage()">
                 <ion-icon ios="ios-swap" md="md-swap"></ion-icon>
             </button>
         </ion-buttons>
