--- a/app/pages/main/home/update-player/update-player.html
+++ b/app/pages/main/home/update-player/update-player.html
@@ -26,7 +26,7 @@
         <ion-list>
             <ion-item>
                 <ion-thumbnail class="circle-large" item-left>
-                    <img src="avatars/boys/sam.svg" alt="">
+                      <img src='{{imagePath}}{{SelectedAvatar}}' alt="">
                 </ion-thumbnail>
                 <button item-right outline small (click)="goToUpdatePlayerAvatarPage()">
                     <ion-icon name="refresh"></ion-icon>
