--- a/app/pages/auth/reset-password/reset-password.html
+++ b/app/pages/auth/reset-password/reset-password.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar secondary>
+    <ion-navbar primary>
 
         <ion-title>Reset Password</ion-title>
 
@@ -30,12 +30,10 @@
      <ion-input type="password" [(ngModel)]="verifyPassword"></ion-input>
     </ion-item>
 
-  </ion-list>
-
-  <ion-list>
-    <ion-item style="text-align: center;" (click)="resetPassword()">
-      <h2 success>Reset Password</h2>
+    <ion-item style="text-align: center;">
+      <button round  primary (click)="resetPassword()">
+                Reset Password
+       </button>
     </ion-item>
   </ion-list>
-
 </ion-content>
