--- a/app/pages/main/events/event/event-brackets/bracketimage.html
+++ b/app/pages/main/events/event/event-brackets/bracketimage.html
@@ -3,7 +3,7 @@
        <ion-title>{{DivisionName}}</ion-title>
         <ion-buttons end>
             <button (click)="goToMenuPage()">
-                <ion-icon name="home"></ion-icon>
+                 <ion-icon ios="ios-swap" md="md-swap"></ion-icon>
             </button>
         </ion-buttons>
     </ion-navbar>
