--- a/app/pages/main/home/add-popover/add-popover.html
+++ b/app/pages/main/home/add-popover/add-popover.html
@@ -2,4 +2,6 @@
     <ion-list-header orange>Add / Follow</ion-list-header>
     <button ion-item (click)="goToFilterTeamStatePage()">Follow Teams</button>
     <button ion-item (click)="goToAddPlayerPage()">Add Player</button>
+    <button ion-item (click)="dismiss()">Cancel</button>
 </ion-list>
+
